# Capstone

./: .gitignore  .pre-commit-config.yaml  README.md  SHA256SUMS.txt  descriptive_statistics.txt  exploratoryStats.py  pylintrc  pyproject.toml  requirements.txt  run.py  run_w_brain.py  run_w_cifar.py  run_w_dropout.py  run_w_imagenet.py
docs/references/: Islam_et_al_2021pdf
source/: dataloader.py  dataset_formatting.py  model_evaluation.py  model_prediction.py  model_train.py  resnet34_arch.py
source/utils/: duplicate_img_check.py  file_count.py
src/: cifar10_plain_cnn.py  cifar10_plain_cnn_pooling.py  cifar10_resnet_arch.py  cifar10_resnet_arch_pooling.py  dataloader.py  dataset_formatting.py  model_evaluation.py  model_prediction.py  model_train.py  plain_cnn.py  resnet50_arch.py  resnet_arch.py  test_saved_model.py  traditional_cnn.py
src/dropout_models/: plain_cnn_w_dropout.py  resnet50_arch_w_dropout.py
src/eda/: dataset_distributions.py  exploratory_data_analysis.ipynb
src/utils/: duplicate_img_check.py  feature_maps_visualizations.py  file_count.py  imagenet_custom_dataset.py  plot_err_graphs.py  plot_loss_curves.py  test_saved_model.py  view_model_arch.py
